Updated paper: CP section and added figures.

--- a/paper/futurework.tex
+++ b/paper/futurework.tex
@@ -1,3 +1,5 @@
 \section{Future Work}
 
-In addition to that already mentioned: there remains much to be done.
+\citeauthor{??} extend \citeauthor{Wadler:2014}'s work to support polymorphism
+in GV. (polymorphism in CP) Future work is to support reduction under these
+terms.
