--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -434,7 +434,7 @@
     \renewcommand{\judgecolor}{\color{black}}
     \renewcommand{\typecolor}{\color{blue}}
     \renewcommand{\termcolor}{\color{red}}
-    \renewcommand{\Typecolor}{\color{cyan}}
+    \renewcommand{\Typecolor}{\color{black}}
     \renewcommand{\Termcolor}{\color{magenta}}
   }
 }
