--- a/paper/formalisation.tex
+++ b/paper/formalisation.tex
@@ -6,7 +6,7 @@ challenge~\cite{Aydemir:2005:MMM}, the development utilises available
 libraries and infrastructure as much as possible. In particular,
 \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} developed a metatheory
 library for handling, among other things, association lists (environments) and
-free variable representation. The current development uses the version of the
+variable representation. The current development uses the version of the
 library distributed by~\citeauthor{Park:2014:MMW}~\cite{Park:2014:MMW} which
 has been updated for Coq version 8.4pl4. One goal of the formalisation effort
 was to minimise the extent to which the development differs from the
@@ -16,11 +16,8 @@ highlighted where they occur.
 
 \subsection{Preliminaries}\label{sec:approach}
 
-%\input{with-connect-rule}
-\input{cp}
-
-The locally nameless first-order representation for binders and free variables
-was adopted for both GV and CP, following
+The locally nameless cofinite quantification (LNCQ) representation for binders
+and free variables was adopted for both GV and CP, following
 \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}. This first-order
 variant prevents variable-capture issues when compared with other first-order
 approaches. Alternatively, I could have chosen a higher-order abstract syntax
@@ -45,31 +42,25 @@ approach described by~\citeauthor{Aydemir:2008:EFM}, which excludes a finite
 set of variables from being considered as the binder. In contrast, the
 traditional ``exists-fresh'' approach, where the binder is only required to be
 fresh within the abstraction's body, does not produce strong enough induction
-principles in some cases. This change will necessitate changes to the typing
-rules of GV and CP. Consider for instance the Connect rule in GV (C) and its
-corresponding cofinite quantification version (CCO) in
-Figure~\ref{fig:connect}. The conclusion specifies a variable in (C) but a
-type in (CCO) (de Bruijn index rather than a name). Thus, in the premise for
-(CCO) one can choose a suitably fresh $x$ in each premise. Note that, $L$ can
-be chosen such that $\Psi \cup \Phi \cup \fv(M) \cup \fv(N) \subseteq L$,
-where $\fv(M)$ are the set of free variables in term $M$, and $x$ can be the
-same in both premises. Similar changes are made to the rules for CP. These
-changes do not alter the typing of processes nor the semantics of the
-translation from GV to CP. An equivalence between ``exists-fresh'' and
-cofinite quantification definitions of the simply-typed $\lambda$-calculus is
-given by \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, and I suspect
-a similar result could be derived straightforwardly (but tediously) for the
-CP/GV system.
+principles in some cases, e.g. weakening~\cite{Aydemir:2008:EFM}. This
+decision impacts upon the premises of the CP/GV typing rules (\S~\ref{sec:cp}
+and \S~\ref{sec:gv}), however these changes do not alter the typing of
+processes nor the semantics of the translation from GV to CP. An equivalence
+between ``exists-fresh'' and cofinite quantification definitions of the
+simply-typed $\lambda$-calculus is given by
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, and I suspect a similar
+result could be derived straightforwardly (but tediously) for the CP/GV
+system.
 
 Another aspect of the encoding is how to define terms. The intrinsic encoding
 described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one
 approach, indexing terms by their type so as to prevent ill-formed terms from
-being constructed. However, in the encoding for CP/GV there are issues with
-using this encoding: $(1)$ it is not immediately clear how to handle linear
-contexts using the de Bruijn variable encoding, since in the intrinsic setting
-the environment automatically supports weakening; $(2)$ an intrinsic encoding
-of GV terms would be complicated by the need to enforce that session types
-occur in certain instances (by use of a predicate); and $(3)$ well-typed terms
+being constructed. However, there are issues with using this encoding for
+CP/GV: $(1)$ it is not immediately clear how to handle linear contexts using
+the de Bruijn variable encoding, since in the intrinsic setting the
+environment automatically supports weakening; $(2)$ an intrinsic encoding of
+GV terms would be complicated by the need to enforce that session types occur
+in certain instances (by use of a predicate); and $(3)$ well-typed terms
 require extra assumptions about binder freshness which cannot reasonably be
 expressed as a function type. For these reasons, an intrinsic approach does
 not offer much benefit since a well-typed term relation would still need to be
@@ -85,13 +76,13 @@ infrastructure. However, I believe one of the contributions of this work is to
 articulate what one needs from state of the art metatheory libraries in order
 to handle session-based languages, and more generally, linear type systems.
 
-\citeauthor{Park:2014:MMW} describe a technique for
-removing nonlinear contexts from typing judgements. While their work extended
-to \fpop it is not clear how to handle an environment containing both
-non-linear and linear types as in GV. I wish to maintain as close a
-relationship as possible to the paper system presented by
-\citeauthor{Wadler:2014}, so separating out the non-linear and linear
-components (as in \fpop) is not an option at this stage.
+\citeauthor{Park:2014:MMW} describe a technique for removing non-linear
+contexts from typing judgements. While their work extended to \fpop it is not
+clear how to handle an environment containing both non-linear and linear types
+as in CP/GV. I wish to maintain as close a relationship as possible to the
+pen-and-paper system presented by \citeauthor{Wadler:2014}, so separating out
+the non-linear and linear components (as in \fpop) is not an option at this
+stage.
 
 \begin{comment}
 \section{Issues}
@@ -109,6 +100,8 @@ components (as in \fpop) is not an option at this stage.
 \end{comment}
 
 \subsection{The process calculus CP}\label{sec:cp}
+
+\input{cp}
 
 \begin{comment}
 FIGURES
@@ -131,37 +124,79 @@ metatheory library since to my knowledge, the library has never been applied
 to a process calculus before. So for instance, in the lambda calculus one
 typically does not work up to permutation of binders, whereas in a process
 calculus these kinds of structural equivalences are standard. Additionally,
-substitution and opening are only defined on processes for names. In other
-words, one cannot substitute an arbitrary process term for a name, unlike in
-the lambda calculus. Thus frameworks which assume a lambda calculi style
-substitution operation are not immediately amenable to the CP
-setting~\cite{Lee:2012}.
+substitution and opening are only defined for names. In other words, one
+cannot substitute an arbitrary process term for a name, unlike in the lambda
+calculus. Thus frameworks which assume a lambda calculi style operations are
+not immediately amenable to the CP setting~\cite{Lee:2012}. Ordering in
+environments is ignored so the development required lemmas allowing the
+permutation of environments. Support for permutating environments is not
+currently supported by the Metatheory library but some general lemmas were
+added as a result of this work. Additionally, custom tactics were developed to
+automatatically solve some simple permutation goals, however these tactics are
+not a ``catch all'' and some generalising still needs to be done.
 
-Note that the rules for polymorphism, $\exists$ and $\forall$, are defined but
-cut elimination on them is not. Since GV (\S~\ref{sec:gv}) does not support
-polymorphism the reduction rules are unnecessary for the translation. Future
-work is to support reduction under these terms.
+% Description of the typing rules...
 
-Initially, an implicit notion of weakening and contraction were chosen so as
-to be in line with \citeauthor{Wadler:2014}'s definitions. However, explicit
-weakening and contraction were required to differentiate the reduction rules
-for the various interactions between servers and clients.
+Figure~\ref{fig:cll} presents the process calculus CP in LNCQ form (ignoring
+permutation premises). In other words bound variables are represented using de
+Brujin indices and free variables are represented using an abstract type
+provided by the Metatheory library. The rules with binders reflect this by
+specifying the type of a bound variable in the constructor rather than the
+name. Cofinite quantification is performed in the hypotheses to these rules by
+excluding a finite set of names from opening the subprocesses. Note that the
+rules for polymorphism, $\exists$ and $\forall$, were included in the final
+Coq development since GV (\S~\ref{sec:gv}) does not support polymorphism
+making the rules unnecessary for the translation. They appear in the Figure
+simply for the sake of completeness. Additionally, as noted by
+\citeauthor{Lee:2012}, support for polymorphism in type variables creates an
+explosion of the infrastructure requiring duplication of opening and
+substituting definitions and lemmas.
 
-Ordering in environments is ignored and the development required lemmas
-allowing the permutation of environments. Support for permutating environments
-is not currently supported in the Metatheory library but some general lemmas
-were added as a result of this work. Additionally, custom tactics were
-developed to automatatically solve some simple permutation goals. However,
-these tactics are not a ``catch all'' and some generalising still needs to be
-done.
+% ...leading on to the discussion of the explicit weakening...
 
-The paper presentation omits details: the principal cut rules do not specify
-weakening could occur: since weakening is implicit is tacitly assumed
-weakening can always be pushed further up the derivation tree e.g. AxCut rule
+Initially, an implicit notion of weakening was chosen so as to be in line with
+\citeauthor{Wadler:2014}'s definitions. However, explicit weakening is
+required to differentiate the principal cut elimination rules for the various
+interactions between servers and clients. contraction is not supported because
+of the difficulty in specifying its principal cut elimination rule. In order
+to specify the rule one requires to show the following:
 
-another interesting aspect which the formalism reveal is the rule for
-associativity is constructed in a way to permit associativity in a certain way
-pre-determined
+\todo{v A -> !0(A).P | Q{x/x'}
+  ==>
+v A -> !0(A).P | v A -> !0(A).P | contract (Gamma) Q}
+
+Unfortunately, the reduction relation does not have knowledge of the
+environment typing process P. This fact does not impact upon expressing
+weakening since for weakening only the names (not the bindings) within the
+environment are required. The paper presentation does not specify where
+weakening could occur; it is tacitly assumed weakening can always be pushed
+further up the derivation tree e.g. AxCut rule. a consequence of this choice
+is that for the empty choice rule there may only be a single binding in the
+context (cf. an arbitrary context in \citeauthor{Wadler:2014}'s
+presentation~\cite{Wadler:2014}).
+
+% ...leading on to presentation of principal cut elimination rules...
+
+\input{principalcp}
+
+The principal cut elimination rules are presented in Figure~\ref{??}. These
+rules are expressed to indicate some additional complexity not present in the
+original presentation. For example, structural equivalences and associativity
+are not unique and different process terms result depending on initial binder
+permutation. ${0 <~> 1}P$ indicates the permuting of binders $0$ and $1$ in
+process P. The paper presentation specifies only one possible associativity
+rule lending to the specific split of the linear environments. The reduction
+rules were complicated to prove due to being composed of multiple constructor
+instances and differed significantly to the standard operational semantics one
+typically deals with in lambda calculus formalisms.
+
+% ...commuting conversions
+
+\input{commconvonecp}
+
+\input{commconvtwocp}
+
+% ...leading on to a discussion of further CP-specific issues encountered.
 
 metatheory library and the library of tactics from software foundations are
 used extensively: metatheory does not handle multiple binders (check this?)
@@ -180,6 +215,8 @@ terms
 typing judgements
 \end{comment}
 
+\input{gv}
+
 While the aim is to be faithful to \citeauthor{Wadler:2014}'s description, I
 may need to alter the approach slightly to avoid tricky formulations. For
 instance, instead of providing $n$-ary branch and choice in GV, I provide
@@ -196,6 +233,28 @@ either rely on the Coq system to provide a stronger mutual induction principle
 or defining one manually. Such a definition is possible, but it complicates
 elimination via the induction principle.
 
+another issue is the way i tried to formulate types initially treating them as
+indexed families indexed by kinds. while this exploits the dependently typed
+approach it complicated later definitions and proofs. for instance decidablity
+of equality on types now relied on an axiom permitting heterogeneous
+equality. further when formulating the typing environment we must decide which
+kind each type had and most rules are polymorphic in that decision leading to
+the creation of an awkward inspection function. these issues highlighted that
+one should be careful and considerate how the representation will affect later
+expressiveness.
+
+explicit limiting and unlimiting of abstraction to ensure rules are syntax
+directed - permits inductive argument on terms when translating from gv to cp
+
 \subsection{CPS translation GV to CP}
+
+type inference of gv terms required cluttered definition of translation with
+impossible error cases. avoided a dependently typed solution due to
+difficulties encountered earlier in the development. james mckinna et
+al. suggest encoding the successful cases in an inductive type and then
+defining the function to act on these cases. will this really work? this means
+a graph of positive cases for types then a function definition for it too
+
+translation uses the coq-ext-lib from michela for monadic notation
 
 Currently the formalisation does not handle this. Future work.
